// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageError test Rendering error with a React Node 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
    style="width: 100%; height: 100%;"
  >
    <div
      class="vertical layout-spacing-medium StyledProps--main"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
        icon="error"
      >
        <svg
          data-icon="error"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            error
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="vertical layout-spacing-undefined StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          You are missing the following permission:
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageError test Rendering error with a string 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
    style="width: 100%; height: 100%;"
  >
    <div
      class="vertical layout-spacing-medium StyledProps--main"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
        icon="error"
      >
        <svg
          data-icon="error"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            error
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
      >
        Invalid Request
      </p>
    </div>
  </div>
</div>
`;

exports[`PageError test Rendering error with no message 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
    style="width: 100%; height: 100%;"
  >
    <div
      class="vertical layout-spacing-medium StyledProps--main"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
        icon="error"
      >
        <svg
          data-icon="error"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            error
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
      >
        We cannot perform your request at the moment. Please try again.
      </p>
    </div>
  </div>
</div>
`;
